--- a/references.bib
+++ b/references.bib
@@ -1,12 +1,188 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Adinda de Wit at 2017-01-30 13:42:42 +0000 
+%% Created for Adinda de Wit at 2017-01-31 18:25:34 +0000 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{noethersthm,
+	Author = {E. Noether},
+	Date-Added = {2017-01-31 18:03:46 +0000},
+	Date-Modified = {2017-01-31 18:06:18 +0000},
+	Journal = {Transp. Theory Statist. Phys.},
+	Keywords = {SM},
+	Pages = {186-207},
+	Title = {Invariant variation problems},
+	Volume = {1},
+	Year = {1971}}
+
+@article{UA2-2,
+	Collaboration = {UA2},
+	Date-Added = {2017-01-31 17:33:40 +0000},
+	Date-Modified = {2017-01-31 17:34:55 +0000},
+	Doi = {10.1016/0370-2693(83)90744-X},
+	Journal = {Phys. Lett. B},
+	Keywords = {SM},
+	Pages = {130-140},
+	Title = {Evidence for $Z^0\rightarrow e^+e^-$ at the CERN anti-p p Collider},
+	Volume = {129},
+	Year = {1983}}
+
+@article{UA2-1,
+	Collaboration = {UA2},
+	Date-Added = {2017-01-31 17:32:25 +0000},
+	Date-Modified = {2017-01-31 17:33:35 +0000},
+	Doi = {10.1016/0370-2693(83)91605-2},
+	Journal = {Phys. Lett. B},
+	Keywords = {SM},
+	Pages = {476-485},
+	Title = {Observation of Single Isolated Electrons of High Transverse Momentum in Events with Missing Transverse Energy at the CERN anti-p p Collider},
+	Volume = {122},
+	Year = {1983}}
+
+@article{UA1-2,
+	Collaboration = {UA1},
+	Date-Added = {2017-01-31 17:31:28 +0000},
+	Date-Modified = {2017-01-31 17:33:39 +0000},
+	Doi = {10.1016/0370-2693(83)90188-0},
+	Journal = {Phys. Lett. B},
+	Keywords = {SM},
+	Number = {126},
+	Pages = {398-410},
+	Title = {Experimental Observation of Lepton Pairs of Invariant Mass Around 95 GeV/$c^2$ at the CERN SPS Collider},
+	Year = {1983}}
+
+@article{UA1-1,
+	Collaboration = {UA1},
+	Date-Added = {2017-01-31 17:29:28 +0000},
+	Date-Modified = {2017-01-31 17:30:50 +0000},
+	Doi = {10.1016/0370-2693(83)91177-2},
+	Journal = {Phys. Lett. B},
+	Keywords = {SM},
+	Pages = {103-116},
+	Title = {Experimental Observation of Isolated Large Transverse Energy Electrons with Associated Missing Energy at $\sqrt{s}=540$ GeV},
+	Volume = {122},
+	Year = {1983}}
+
+@article{gargamelle,
+	Collaboration = {Gargamelle Neutrino},
+	Date-Added = {2017-01-31 17:28:13 +0000},
+	Date-Modified = {2017-01-31 17:29:25 +0000},
+	Doi = {10.1016/0370-2693(73)90499-1},
+	Journal = {Phys. Lett. B},
+	Keywords = {SM},
+	Pages = {138-140},
+	Title = {Observation of Neutrino Like Interactions Without Muon Or Electron in the Gargamelle Neutrino Experiment},
+	Volume = {46},
+	Year = {1973}}
+
+@article{ckm-matrix-KM,
+	Author = {M. Kobayashi and T. Maskawa},
+	Date-Added = {2017-01-31 14:46:56 +0000},
+	Date-Modified = {2017-01-31 14:48:19 +0000},
+	Doi = {10.1143/PTP.49.652},
+	Journal = {Prog. Theor. Phys. },
+	Keywords = {SM},
+	Pages = {652},
+	Title = {CP Violation in the Renormalizable Theory of Weak Interaction},
+	Volume = {49},
+	Year = {1973}}
+
+@article{ckm-matrix-cabibbo,
+	Author = {N. Cabibbo},
+	Date-Added = {2017-01-31 14:40:48 +0000},
+	Date-Modified = {2017-01-31 14:46:50 +0000},
+	Doi = {10.1103/PhysRevLett.10.531},
+	Journal = {Phys. Rev. Lett.},
+	Keywords = {SM},
+	Pages = {531},
+	Title = {Unitary Symmetry and Leptonic Decays},
+	Volume = {10},
+	Year = {1963}}
+
+@article{goldstone-theorem-2,
+	Author = {J. Goldstone and A. Salam and S. Weinberg},
+	Date-Added = {2017-01-31 14:31:22 +0000},
+	Date-Modified = {2017-01-31 14:32:59 +0000},
+	Doi = {10.1103/PhysRev.127.965},
+	Journal = {Phys. Rev.},
+	Keywords = {SM},
+	Pages = {965},
+	Title = {Broken Symmetries},
+	Volume = {127},
+	Year = {1962}}
+
+@article{goldstone-theorem,
+	Author = {J. Goldstone},
+	Date-Added = {2017-01-31 14:29:54 +0000},
+	Date-Modified = {2017-01-31 14:31:19 +0000},
+	Doi = {10.1007/BF02812722},
+	Journal = {Nuovo Cim.},
+	Keywords = {SM},
+	Pages = {154-164},
+	Title = {Field Theories with Superconductor Solutions},
+	Volume = {19},
+	Year = {1961}}
+
+@article{GHK,
+	Author = {G. S. Guralnik and C. R. Hagen and T. W. B. Kibble},
+	Date-Added = {2017-01-30 22:31:59 +0000},
+	Date-Modified = {2017-01-30 22:33:03 +0000},
+	Journal = {Phys. Rev. Lett.},
+	Keywords = {SM},
+	Pages = {585-587},
+	Title = {Global conservation laws and massless particles},
+	Volume = {13},
+	Year = {1964}}
+
+@article{higgs-III,
+	Author = {P. W. Higgs},
+	Date-Added = {2017-01-30 22:31:30 +0000},
+	Date-Modified = {2017-01-30 22:31:57 +0000},
+	Journal = {Phys. Rev.},
+	Keywords = {SM},
+	Pages = {1156},
+	Title = {Spontaneous symmetry breakdown without massless bosons},
+	Volume = {145},
+	Year = {1966}}
+
+@article{higgs-II,
+	Author = {P. W. Higgs},
+	Date-Added = {2017-01-30 22:30:40 +0000},
+	Date-Modified = {2017-01-30 22:31:29 +0000},
+	Journal = {Phys. Lett.},
+	Keywords = {SM},
+	Pages = {132},
+	Title = {Broken symmetries, massless particles and gauge fields},
+	Volume = {12},
+	Year = {1964}}
+
+@article{higgs-I,
+	Author = {P. W. Higgs},
+	Date-Added = {2017-01-30 13:47:23 +0000},
+	Date-Modified = {2017-01-30 13:48:01 +0000},
+	Doi = {10.1103/PhysRevLett.13.508},
+	Journal = {Phys. Rev. Lett.},
+	Keywords = {SM},
+	Pages = {508},
+	Title = {Broken symmetries and the masses of gauge bosons},
+	Volume = {13},
+	Year = {1964}}
+
+@article{englertbrout,
+	Author = {F. Englert and R. Brout},
+	Date-Added = {2017-01-30 13:46:14 +0000},
+	Date-Modified = {2017-01-30 13:47:22 +0000},
+	Doi = {10.1103/PhysRevLett.13.321},
+	Journal = {Phys. Rev. Lett.},
+	Keywords = {SM},
+	Pages = {321},
+	Title = {Broken symmetry and the mass of gauge vector mesons},
+	Volume = {13},
+	Year = {1964}}
 
 @article{salam-ewk,
 	Author = {A. Salam},
@@ -978,9 +1154,9 @@
 @article{pdg-2014,
 	Collaboration = {Particle Data Group},
 	Date-Added = {2016-11-29 16:07:30 +0000},
-	Date-Modified = {2016-11-30 10:34:04 +0000},
+	Date-Modified = {2017-01-31 14:53:37 +0000},
 	Journal = {Chin.Phys.C},
-	Keywords = {Objects},
+	Keywords = {Objects,MSSM,SM},
 	Title = {Review of particle physics},
 	Volume = {38},
 	Year = {2014}}
