Own theory chapter edits

--- a/backmatter.tex
+++ b/backmatter.tex
@@ -15,7 +15,7 @@
 \begin{acronym}[CERN]
 \acro{EM}[EM]{electromagnetic}
 \acro{QFT}[QFT]{quantum field theory}
-\acro{QCD}[QCD]{quantom chromodynamics}
+\acro{QCD}[QCD]{quantum chromodynamics}
 \acro{QED}[QED]{quantum electrodynamics}
 \acro{LEP}[LEP]{Large Electron-Positron}
 \acro{MC}[MC]{Monte Carlo}
