And adding conclusion and outlook :-)

--- a/references.bib
+++ b/references.bib
@@ -1,12 +1,22 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Adinda de Wit at 2017-01-31 18:25:34 +0000 
+%% Created for Adinda de Wit at 2017-02-03 16:45:14 +0000 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{HTT-projection,
+	Collaboration = {CMS},
+	Date-Added = {2017-02-03 16:43:50 +0000},
+	Date-Modified = {2017-02-03 16:44:33 +0000},
+	Journal = {CMS Performance Note},
+	Keywords = {13TeV},
+	Title = {Updates on Projections of Physics Reach with the Upgraded CMS Detector for High Luminosity LHC},
+	Volume = {CMS-DP-2016-064},
+	Year = {2016}}
 
 @article{noethersthm,
 	Author = {E. Noether},
@@ -29,7 +39,8 @@
 	Pages = {130-140},
 	Title = {Evidence for $Z^0\rightarrow e^+e^-$ at the CERN anti-p p Collider},
 	Volume = {129},
-	Year = {1983}}
+	Year = {1983},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1016/0370-2693(83)90744-X}}
 
 @article{UA2-1,
 	Collaboration = {UA2},
@@ -41,7 +52,8 @@
 	Pages = {476-485},
 	Title = {Observation of Single Isolated Electrons of High Transverse Momentum in Events with Missing Transverse Energy at the CERN anti-p p Collider},
 	Volume = {122},
-	Year = {1983}}
+	Year = {1983},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1016/0370-2693(83)91605-2}}
 
 @article{UA1-2,
 	Collaboration = {UA1},
@@ -53,7 +65,8 @@
 	Number = {126},
 	Pages = {398-410},
 	Title = {Experimental Observation of Lepton Pairs of Invariant Mass Around 95 GeV/$c^2$ at the CERN SPS Collider},
-	Year = {1983}}
+	Year = {1983},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1016/0370-2693(83)90188-0}}
 
 @article{UA1-1,
 	Collaboration = {UA1},
@@ -65,7 +78,8 @@
 	Pages = {103-116},
 	Title = {Experimental Observation of Isolated Large Transverse Energy Electrons with Associated Missing Energy at $\sqrt{s}=540$ GeV},
 	Volume = {122},
-	Year = {1983}}
+	Year = {1983},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1016/0370-2693(83)91177-2}}
 
 @article{gargamelle,
 	Collaboration = {Gargamelle Neutrino},
@@ -77,19 +91,21 @@
 	Pages = {138-140},
 	Title = {Observation of Neutrino Like Interactions Without Muon Or Electron in the Gargamelle Neutrino Experiment},
 	Volume = {46},
-	Year = {1973}}
+	Year = {1973},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1016/0370-2693(73)90499-1}}
 
 @article{ckm-matrix-KM,
 	Author = {M. Kobayashi and T. Maskawa},
 	Date-Added = {2017-01-31 14:46:56 +0000},
 	Date-Modified = {2017-01-31 14:48:19 +0000},
 	Doi = {10.1143/PTP.49.652},
-	Journal = {Prog. Theor. Phys. },
+	Journal = {Prog. Theor. Phys.},
 	Keywords = {SM},
 	Pages = {652},
 	Title = {CP Violation in the Renormalizable Theory of Weak Interaction},
 	Volume = {49},
-	Year = {1973}}
+	Year = {1973},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1143/PTP.49.652}}
 
 @article{ckm-matrix-cabibbo,
 	Author = {N. Cabibbo},
@@ -101,7 +117,8 @@
 	Pages = {531},
 	Title = {Unitary Symmetry and Leptonic Decays},
 	Volume = {10},
-	Year = {1963}}
+	Year = {1963},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1103/PhysRevLett.10.531}}
 
 @article{goldstone-theorem-2,
 	Author = {J. Goldstone and A. Salam and S. Weinberg},
@@ -113,7 +130,8 @@
 	Pages = {965},
 	Title = {Broken Symmetries},
 	Volume = {127},
-	Year = {1962}}
+	Year = {1962},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1103/PhysRev.127.965}}
 
 @article{goldstone-theorem,
 	Author = {J. Goldstone},
@@ -125,7 +143,8 @@
 	Pages = {154-164},
 	Title = {Field Theories with Superconductor Solutions},
 	Volume = {19},
-	Year = {1961}}
+	Year = {1961},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1007/BF02812722}}
 
 @article{GHK,
 	Author = {G. S. Guralnik and C. R. Hagen and T. W. B. Kibble},
@@ -170,7 +189,8 @@
 	Pages = {508},
 	Title = {Broken symmetries and the masses of gauge bosons},
 	Volume = {13},
-	Year = {1964}}
+	Year = {1964},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1103/PhysRevLett.13.508}}
 
 @article{englertbrout,
 	Author = {F. Englert and R. Brout},
@@ -182,7 +202,8 @@
 	Pages = {321},
 	Title = {Broken symmetry and the mass of gauge vector mesons},
 	Volume = {13},
-	Year = {1964}}
+	Year = {1964},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1103/PhysRevLett.13.321}}
 
 @article{salam-ewk,
 	Author = {A. Salam},
@@ -205,7 +226,8 @@
 	Pages = {1264-1266},
 	Title = {A Model of Leptons},
 	Volume = {19},
-	Year = {1967}}
+	Year = {1967},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1103/PhysRevLett.19.1264}}
 
 @article{glashow-ewk,
 	Author = {S. L. Glashow},
@@ -217,7 +239,8 @@
 	Pages = {579-588},
 	Title = {Partial-symmetries of weak interactions},
 	Volume = {22},
-	Year = {1961}}
+	Year = {1961},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1016/0029-5582(61)90469-2}}
 
 @article{asympt-II,
 	Author = {H. D. Polizter},
@@ -229,7 +252,8 @@
 	Pages = {1346-1349},
 	Title = {Reliable Perturbative Results for Strong Interactions?},
 	Volume = {30},
-	Year = {1973}}
+	Year = {1973},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1103/PhysRevLett.30.1346}}
 
 @article{asympt-I,
 	Author = {D. J. Gross and F. Wilczek},
@@ -241,7 +265,8 @@
 	Pages = {1343-1346},
 	Title = {Ultraviolet Behavior of Nonabelian Gauge Theories},
 	Volume = {30},
-	Year = {1973}}
+	Year = {1973},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1103/PhysRevLett.30.1343}}
 
 @book{griffiths,
 	Author = {D. Griffiths},
@@ -329,7 +354,7 @@
 	Date-Modified = {2017-01-25 14:06:10 +0000},
 	Journal = {ATLAS Note},
 	Keywords = {MSSMHiggs},
-	Title = {Search for charged Higgs bosons in the $\tau$+jets final state with  14.7 fb$^{-1}$ of $pp$ collision data recorded at $\sqrt{s}=13$ TeV with the ATLAS experiment},
+	Title = {Search for charged Higgs bosons in the $\tau$+jets final state with 14.7 fb$^{-1}$ of $pp$ collision data recorded at $\sqrt{s}=13$ TeV with the ATLAS experiment},
 	Volume = {ATLAS-CONF-2016-088},
 	Year = {2016}}
 
@@ -503,7 +528,7 @@
 	Year = {2016}}
 
 @article{CouplComb,
-	Collaboration = {ATLAS and CMS },
+	Collaboration = {ATLAS and CMS},
 	Date-Added = {2017-01-25 09:49:24 +0000},
 	Date-Modified = {2017-01-25 09:56:14 +0000},
 	Doi = {10.1007/JHEP08(2016)045},
@@ -513,7 +538,8 @@
 	Pages = {045},
 	Title = {Measurements of the Higgs boson production and decay rates and constraints on its couplings from a combined ATLAS and CMS analysis of the LHC pp collision data at $\sqrt{s}=7$ and 8 TeV},
 	Volume = {08},
-	Year = {2016}}
+	Year = {2016},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1007/JHEP08(2016)045}}
 
 @article{MassComb,
 	Collaboration = {ATLAS and CMS},
@@ -639,7 +665,6 @@
 	Date-Modified = {2017-01-22 14:15:57 +0000},
 	Doi = {10.1142/9789812839657_0001},
 	Eprint = {hep-ph/9709356},
-	Journal = { },
 	Keywords = {MSSM},
 	Title = {A Supersymmetry Primer},
 	Year = {1997},
@@ -664,7 +689,6 @@
 	Date-Added = {2017-01-21 22:20:00 +0000},
 	Date-Modified = {2017-01-22 14:23:56 +0000},
 	Eprint = {hep-ph/9912223},
-	Journal = { },
 	Keywords = {MSSM},
 	Title = {Suggestions for Improved Benchmark Scenarios for Higgs-Boson Searches at LEP2},
 	Year = {1999},
@@ -1645,7 +1669,7 @@
 @article{2HDM-I,
 	Annote = {
 },
-	Author = {G. Branco and P. Ferreira  and L. Lavoura  and M. Rebelo and M. Sher and J. Silva},
+	Author = {G. Branco and P. Ferreira and L. Lavoura and M. Rebelo and M. Sher and J. Silva},
 	Date-Added = {2016-10-06 11:21:35 +0000},
 	Date-Modified = {2017-01-24 09:38:03 +0000},
 	Doi = {http://dx.doi.org/10.1016/j.physrep.2012.02.002},
