--- a/thesis.tex
+++ b/thesis.tex
@@ -56,6 +56,7 @@
   \input{Objects/Objects}
   \input{Hhh/Hhh}
   \input{MSSM/MSSM}
+  \input{Conclusion/Conclusion}
 \end{mainmatter}
 
 %% Produce the appendices
